client/css/main.css
html {
	height: 100%;
}

body {
	margin: 0;
	padding: 0;
	height: 100%;
	font-family:"Droid Sans", "Calibri";
	color: white;
	/*background: black;*/
	background-image: -moz-linear-gradient(top, #000000 0%, #363636 50%, #111111 75%, #000305 100%);
	background-image: -webkit-linear-gradient(top, #000000 0%, #363636 50%, #111111 75%, #000305 100%);
}
a{
	color::white;
	text-decoration:none;
}

h1 {
	font-size: 1.5em;
}

#screen { /*Simulating small screen and will be removed*/
	position: relative;
	width: 640px;
	height: 480px;
	border: 1px dashed #333;
}

#pageWrapper {
	position: relative;
	width: 100%;
	min-height: 100%;
	max-height: 100%;
	border-collapse: collapse;
	overflow: hidden;
}

#topBar {
	position: fixed;
	border-bottom: 8px solid #373534;
	border-radius: 5px;
	width: 100%;
	height: 35px;
	top: 0;
	left:0;
	font-size:24px;
	padding-top: 10px;
	background: black;
	
}
#codemill_logo{
	height:24px;
	margin-left: 10px;
}

.topBarSection {
	width: 33%;
	float: left;
	color: white;
	font-weight: bold;
}

#topBarCenter {
	text-align: center;
}

#topBarRight {
	text-align: right;
}

#contentArea {
	position: relative;
	margin: 35px 0;
	padding: 10px 20px;
}


#mainContent {
	margin: 0 auto;
}

#progressBar {
	height: 8px;
	position: absolute;
	bottom: -8px;
	/*background: #00aeef;*/
	background-image: -moz-linear-gradient(top left, #3366CC 0%, #00AEEF 50%, #99CCFF 100%);
	background-image: -webkit-linear-gradient(top left, #3366CC 0%, #00AEEF 50%, #99CCFF 100%);
	border-radius: 5px;
	left: 0px;
}

#bottomBar {
	background: #07090a;
	font-size: 85%;
	position: fixed;
	border-top: 0px solid #00aeef;
	height: 40px;
	width: 100%;
	bottom: 0px;
	
}

#bottomBarMiddleSection {
	width: 50%;
	color: white;
	float: left;
	text-align: center;
}

.bottomBarLeft {
	width: 23%;
	color: #00aeef;
	float: left;
	height: 100%;
	padding-left: 10px;
}
.bottomBarRight {
	width: 23%;
	color: #00aeef;
	float: right;
	height: 100%;
	padding-right: 10px;
}

.small-text  {
	margin-top: -10px;
	font-size: 85%;
	
}

.bubble {
	position: relative;
	padding: 7px;
	color: #00AEEF;
	background-color: white;
	border-radius: 8px;
	display:inline-block;
	max-width: 260px;
	height: 16px;
}

.bubble_point {
	margin-left: -5px;
	margin-top: 1px;
}

.bottomBarImage {
	vertical-align: middle;
	display: inline-block;
	position: relative;
}

#nextText, #prevText {
	display:inline-block;
	max-width: 130px;
	max-height: 30px;
	vertical-align: middle;
	position: relative;
	overflow: hidden;
}

